--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
     "react-scripts": "5.0.1",
+    "simplify-js": "^1.2.4",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://prasannanivas.github.io/boomsold-ui",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
