--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@turf/helpers": "^7.2.0",
+    "@turf/union": "^7.2.0",
     "leaflet": "^1.9.4",
     "leaflet-clip": "^0.0.2",
     "leaflet-tilelayer-mbtiles": "^1.4.1",
