--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@turf/helpers": "^7.2.0",
     "@turf/union": "^7.2.0",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "leaflet": "^1.9.4",
     "leaflet-clip": "^0.0.2",
     "leaflet-tilelayer-mbtiles": "^1.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.0",
     "react-leaflet": "^5.0.0",
     "react-scripts": "5.0.1",
     "simplify-js": "^1.2.4",
